--- a/index.html
+++ b/index.html
@@ -16,18 +16,20 @@
                     <h2 class="hidden">Main Nav</h2>
                     <p>Nav</p>
                 </nav>
+                <br>
             </header>
             <section class="grid-con">
                 <h2 class="hidden">News Header</h2>
                 <div class="col-span-4 m-col-span-12 l-col-span-12 xl-col-span-12 box">
                     <p>News</p>
                 </div>
+                <br><br>
             </section>
             <section class="grid-con">
                 <h2 class="hidden">Product Banner</h2>
                 <div class="col-span-4 m-col-span-12 l-col-span-12 xl-col-span-12 box"><p>Product Banner</p>
                 </div>
-            </section>
+            </section><br>
             <section class="grid-con">
                 <h2 class="hidden">Product Section</h2>
                 <div class="col-span-2 m-col-span-4 l-col-span-4 xl-col-span-4 box">Product 1</div>
@@ -36,7 +38,7 @@
                 <div class="col-span-2 m-col-span-4 l-col-span-4 xl-col-span-4 box">Product 4</div>
                 <div class="col-span-2 m-col-span-4 l-col-span-4 xl-col-span-4 box">Product 5</div>
                 <div class="col-span-2 m-col-span-4 l-col-span-4 xl-col-span-4 box">Product 6</div>
-            </section>
+            </section><br><br>
             <footer class="grid-con">
                 <h2 class="hidden">Sign up Section</h2>
                 <div class="col-span-4 m-col-span-12 l-col-span-12 xl-col-span-12 box">Notification Sign Up</div>
